# vellum-client-python

./: .fernignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  package-lock.json  pyproject.toml  reference.md
.github/workflows/: ci-codegen.yaml  ci.yml  release.yml
.mock/: fern.config.json
.mock/definition/: __package__.yml  adHoc.yml  api.yml  containerImages.yml  deployments.yml  documentIndexes.yml  documents.yml  folderEntities.yml  metricDefinitions.yml  mlModels.yml  sandboxes.yml  testSuiteRuns.yml  testSuites.yml  workflowDeployments.yml  workflowSandboxes.yml  workflows.yml  workspaceSecrets.yml
.mock/openapi/: openapi.yml
ee/: LICENSE  package-lock.json
ee/automation/: README.md  package.json
ee/codegen/: .eslintrc  .npmrc  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
ee/codegen/scripts/: upgrade-codegen-service.js  upgrade-codegen-service.mts  version.js
ee/codegen/src/: codegen.ts  constants.ts  index.ts  project.ts
ee/codegen_integration/: conftest.py  test_code_to_display.py  test_fixtures.py  utils.py
ee/tests/codegen_integration/: test_code_to_display.py
ee/vellum_cli/: CONTRIBUTING.md  README.md  __init__.py  aliased_group.py  config.py  image_push.py  logger.py  pull.py  push.py
ee/vellum_cli/tests/: conftest.py  test_config.py  test_main.py  test_pull.py  test_push.py
examples/: Running a Test Suite on an External Function.ipynb  Synthetic Conversation Generation.ipynb  test_suites.py
examples/datasets/: seed_user_messages.csv
scripts/: create_release.py  install_poetry.py  temp.py
src/vellum/: __init__.py  client.py  environment.py  version.py
src/vellum/api/: __init__.py  client.py  environment.py
src/vellum/client/: README.md  __init__.py
src/vellum/core/: __init__.py  api_error.py  client_wrapper.py  context.py  datetime_utils.py  file.py  http_client.py  jsonable_encoder.py  pydantic_utilities.py  query_encoder.py  remove_none_from_dict.py  request_options.py  serialization.py
src/vellum/deployments/: client.py
src/vellum/document_indexes/: client.py
src/vellum/documents/: client.py
src/vellum/errors/: __init__.py  bad_request_error.py  conflict_error.py  forbidden_error.py  internal_server_error.py  not_found_error.py
src/vellum/evaluations/: __init__.py  exceptions.py  resources.py
src/vellum/folder_entities/: client.py
src/vellum/lib/: __init__.py  test_suite.py
src/vellum/plugins/: pydantic.py  utils.py  vellum_mypy.py
src/vellum/resources/: __init__.py
src/vellum/sandboxes/: client.py
src/vellum/terraform/: __init__.py  constraints.json  versions.json
src/vellum/test_suite_runs/: client.py
src/vellum/test_suites/: client.py
src/vellum/types/: __init__.py  ad_hoc_execute_prompt_event.py  ad_hoc_expand_meta.py  ad_hoc_expand_meta_request.py  ad_hoc_expand_meta_request_request.py  ad_hoc_fulfilled_prompt_execution_meta.py  ad_hoc_initiated_prompt_execution_meta.py  ad_hoc_rejected_prompt_execution_meta.py  ad_hoc_streaming_prompt_execution_meta.py  add_openai_api_key_enum.py  api_node_result.py  api_node_result_data.py  array_chat_message_content.py  array_enum.py  array_input.py  (+754 more)
tests/: conftest.py  helpers.py  test_container_images.py  test_deployments.py  test_document_indexes.py  test_folder_entities.py  test_metric_definitions.py  test_ml_models.py  test_root.py  test_sandboxes.py  test_test_suite_runs.py  test_test_suites.py  test_workflow_deployments.py  test_workflow_sandboxes.py  test_workflows.py  test_workspace_secrets.py
tests/client/: test_container_images.py  test_deployments.py  test_documents.py  test_metric_definitions.py  test_root.py  test_workflow_deployments.py
tests/lib/: test_test_suite.py  test_test_suites.py
tests/utils/: test_http_client.py  test_query_encoding.py  test_serialization.py
(+1023 files in other folders)
