
[tool.poetry]
name = "vellum-ai"
version = "v0.0.6"
description = ""
authors = []
packages = [
    { include = "vellum", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.9.2"
httpx = "0.23.3"
backports-cached_property = "1.0.2"
types-backports = "0.1.3"

[tool.poetry.dev-dependencies]
mypy = "0.971"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
