[tool.poetry]
name = "vellum-ai"
version = "0.10.4"
description = ""
readme = "README.md"
authors = []
keywords = []
license = "MIT"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "License :: OSI Approved :: MIT License"
]
packages = [
    { include = "vellum", from = "src" },
    { include = "vellum_cli", from = "ee" },
    { include = "vellum_ee", from = "ee" },
]

[project.urls]
Repository = 'https://github.com/vellum-ai/vellum-python-sdks'

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "3.1.2"
cdktf = "^0.20.5"
click = "8.1.7"
docker = "7.1.0"
httpx = ">=0.21.2"
orderly-set = "^5.2.2"
publication = "0.0.3"
pydantic = ">= 1.9.2"
pydantic-core = "^2.18.2"
pydash = "7.0.6"
python-dotenv = "1.0.1"
pytz = "2022.6"
pyyaml = "6.0.1"
requests = "2.32.3"
tomli = "2.0.2"
typing_extensions = ">= 4.0.0"

[tool.poetry.dev-dependencies]
mypy = "1.11.1"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.5"
python-dateutil = "^2.9.0"
types-python-dateutil = "^2.9.0.20240316"
deepdiff = "8.0.1"
ipdb = "0.13.13"
ipython = "8.12.3"
isort = "5.13.2"
pre-commit = "3.5.0"
pytest-mock = "3.10.0"
requests-mock = "1.11.0"
ruff = "^0.5.6"
tomli_w = "1.1.0"
types-PyYAML = "6.0.12.20240808"
types-pytz = "2024.1.0.20240417"
types-requests = "2.32.0.20240712"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
asyncio_mode = "auto"

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "vellum.plugins.vellum_mypy",
]
check_untyped_defs = true
exclude = "venv"
overrides = [
    { module = "deepdiff.*", ignore_missing_imports = true },
    { module = "docker.*", ignore_missing_imports = true },
    { module = "setuptools.*", ignore_missing_imports = true },
]
[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
vellum = "vellum_cli:main"

[tool.isort]
multi_line_output = 3
force_grid_wrap = 0
line_length = 120
combine_as_imports = true
force_sort_within_sections = true
include_trailing_comma = true
use_parentheses = true
known_testing = "pytest"
known_typing = ["typing", "typing_extensions"]
known_vellum = ["vellum", "vellum_cli", "vellum_ee"]
default_section = "THIRDPARTY"
sections = ["FUTURE", "TESTING", "STDLIB", "TYPING", "THIRDPARTY", "VELLUM", "FIRSTPARTY", "LOCALFOLDER"]
no_lines_before = ["STDLIB", "TYPING"]
